# django_rest

./: CLAUDE.md  README.md  docker-compose.yml  dockerfile  env.dev  pyproject.toml
.github/workflows/: build.yml  workflow-pr.yml
django_rest/: settings.py  urls.py
order/: factories.py  urls.py
order/migrations/: 0001_initial.py
order/serializers/: order_serializer.py
order/viewsets/: order_viewset.py
product/: factories.py
product/migrations/: 0001_initial.py
product/models/: product.py
product/serializers/: product_serializer.py
product/viewsets/: category_viewset.py
tests/models/: test_category.py  test_order.py  test_product.py
tests/serializers/: test_category_serializer.py  test_order_serializer.py  test_product_serializer.py
tests/viewsets/: test_category_viewset.py  test_order_viewset.py  test_product_viewset.py
